ldtv and career

--- a/ldtv-category.html
+++ b/ldtv-category.html
@@ -353,7 +353,7 @@
                 <div class="second">
                     <div class="container">
                         <div class="Ytsld">
-                            <div class="di-flex slid thumbimg">
+                            <div class="di-flex slid thumbimg" id="thumbimg">
                             </div>
                         </div>
                     </div>
