container class name change

--- a/career-details.html
+++ b/career-details.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="career-detail">
-        <div class="container">
+        <div class="maincnt">
             <div class="job-detail">
                 <a href="#" class="browse"><span><img src="img/arrow-lft.png" alt="">browse more job openings</span></a>
                 <h1>Job Details</h1>
