--- a/ld-tv.html
+++ b/ld-tv.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="first-fold">
-        <div class="container">
+        <div class="maincnt">
             <div class="di-flex first">
                 <div class="w-50 first-part">
                     <span class="social-media">Social Media</span>
@@ -172,7 +172,7 @@
         </div>
     </div>
     <section class="ldtvinsights">
-        <div class="container">
+        <div class="maincnt">
             <div class="space-ld">
                 <div class="di-flex ldtvinsigh ">
                     <div class="w-50 ldtvinsigh first-part">
@@ -189,7 +189,7 @@
         </div>
     </section>
     <section class="MostWatched">
-        <div class="container">
+        <div class="maincnt">
             <div class="Ytsld">
                 <div class="di-flex slid">
                     <div class="thumbnail">
@@ -345,7 +345,7 @@
         </div>
     </section>
     <saection class="thindustry">
-        <div class="container">
+        <div class="maincnt">
             <div class="di-flex industry">
                 <div class="w-50 industry-first">
                     <img class="dbl-qt" src="img/dbl-qt.png" alt="">
