--- a/ldtv-category.html
+++ b/ldtv-category.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main web-category">
         <div class="social-media">
-            <div class="container">
+            <div class="maincnt">
                 <div class="Categories">
                     <div class="di-flex allcategories" id="ldtvCategory">
                         <!-- <a class="btn-1" href="#">All</a> -->
@@ -40,7 +40,7 @@
 
             <div id="all" class="cat-tab"></div>
             <div id="social-media" class="cat-tab active">
-                <div class="container">
+                <div class="maincnt">
                     <div class="Ytsld">
                         <div class="di-flex slid">
                             <div class="thumbnail">
@@ -313,7 +313,7 @@
                     </div>
                 </div>
                 <div class="Instagrams inst">
-                    <div class="container">
+                    <div class="maincnt">
                         <div class="di-flex inst">
                             <div class="w-50 insta-first">
                                 <span class="social-media-1">Social Media</span>
@@ -351,7 +351,7 @@
                 </div>
 
                 <div class="second">
-                    <div class="container">
+                    <div class="maincnt">
                         <div class="Ytsld">
                             <div class="di-flex slid thumbimg" id="thumbimg">
                             </div>
