--- a/Survey.html
+++ b/Survey.html
@@ -12,7 +12,7 @@
 <body>
     <div class="surveymain">
         <div class="survey">
-            <div class="container">
+            <div class="maincnt">
                 <h2 class="survey-heading">Recent Surveys</h2>
                 <div class="di-flex recentsrv">
                     <div class="w-50 srvfirst">
@@ -35,7 +35,7 @@
             </div>
         </div>
         <section class="surveybox">
-            <div class="container">
+            <div class="maincnt">
                 <div class="di-flex survey">
                     <div class="w-33 srvbox">
                         <div class="box">
@@ -86,7 +86,7 @@
         </section>
 
         <section class="Ready">
-            <div class="container">
+            <div class="maincnt">
                 <div class="rady">
                     <div class="di-flex reaysec">
                         <div class="w-50 readyfst">
@@ -100,7 +100,7 @@
             </div>
         </section>
         <section class="surveybox">
-            <div class="container">
+            <div class="maincnt">
                 <div class="di-flex survey">
                     <div class="w-33 srvbox">
                         <div class="box">
@@ -151,7 +151,7 @@
         </section>
 
         <section class="doyou">
-            <div class="container">
+            <div class="maincnt">
                 <div class="doyoutnk">
                     <div class="di-flex doyousec">
                         <div class="w-60 doyoufst">
@@ -207,7 +207,7 @@
         </section>
 
         <section class="surveybox">
-            <div class="container">
+            <div class="maincnt">
                 <div class="di-flex survey">
                     <div class="w-33 srvbox">
                         <div class="box">
