--- a/Thankyou.html
+++ b/Thankyou.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="thankumain">
-        <div class="container">
+        <div class="maincnt">
             <div class="thank-container">
                 <div class="thankbox-main">
                     <div class="tnk-box">
