created new page and changed the containe to maincnt and added some css

--- a/Start-your-journey-with-us.html
+++ b/Start-your-journey-with-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,68 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Start your journey with us</title>
 </head>
+
 <body>
     <section class="journey">
         <div class="maincnt">
+            <a href="#" class="browse"><span><img src="img/arrow-lft.png" alt="">back to job details</span></a>
+            <div class="journey-form">
+                <p class="jny-txt">Start your journey with us.</p>
+                <p class="sub-txt"> Fill out a few details to let us know your profile for hiring process.</p>
+
+                <div class="form">
+                    <ul class="di-flex">
+                        <li class="w-50"> <label for="name" class="form-txt">Name*</label><br>
+                            <input type="text"  name="name" placeholder="Enter your full name" >
+                            <p class="valdi-txt">dummy</p>
+                        </li>
+                        <li class="w-50"> <label for="email">Email*</label> <br>
+                            <input type="email" name="email"  placeholder="Enter your full email">
+                            <p class="valdi-txt">dummy</p>
+                        </li>
+                        <li class="w-50"> <label for="phone">Phone number*</label> <br>
+                            <input type="text" name="phone"  placeholder="Enter 10 digit numbers">
+                            <p class="valdi-txt">dummy</p>
+                        </li>
+                        <li class="w-50"> <label for="ipsd">Interests (Professional Skills/Domain Areas)*</label><br>
+                            <input type="text"  name="opsd" placeholder="Professional Communication, Leadership, etc.">
+                            <p class="valdi-txt">dummy</p>
+                        </li>
+                        <li class="w-50"> <label for="location">Location*</label>
+                            <select name="Location" id="cars">
+                                <option value="state">State you are situated at</option>
+                                <option value="mumbai">Mumbai</option>
+                                <option value="navi-mumbai">Navi-Mumbai</option>
+                                <option value="delhi">Delhi</option>
+                              </select>
+                              <p class="valdi-txt">dummy</p>
+                        </li>
+                        <li class="w-50"> <label for="city">City</label> <br>
+                            <input type="text"  name="city" placeholder="City, Landmark">
+                            <p class="valdi-txt">dummy</p>
+                        </li>
+                        <li class="w-50"> <label for="exp">Experience (in years)</label> <br>
+                            <input type="text"  name="exp"  placeholder="Enter overall years of experience">
+                            <p class="valdi-txt">dummy</p>
+                        </li>
+                    </ul>
+                    
+                    <ul>
+                        <li class="w-50"> <label for="resume">Upload Resume</label>
+                            <input type="file"  name="resume"  placeholder="Upload Resume">
+                        </li>
+                        <p class="valdi-txt">dummy</p>
+                    </ul>
+
+                    <button class="journey-btn">submit </button>
+                </div>
+
+
+            </div>
 
         </div>
 
     </section>
 </body>
+
 </html>
